plugins {
    id 'com.android.application'
}

android {
    namespace 'com.by.sasa.bistrovic.ethereumandnfc'
    compileSdk 34

    defaultConfig {
        applicationId "com.by.sasa.bistrovic.ethereumandnfc"
        minSdk 24
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
}

dependencies {

    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.google.guava:guava:27.0.1-jre'
    //implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.68'
    //implementation 'com.github.UnknownEnergy:web3j:android_with_erc20_contract-SNAPSHOT'
    //implementation 'org.web3j:core:3.4.0-android'
    //implementation 'org.web3j:core:4.1.0-android'
    implementation 'org.web3j:core:4.9.4'
    //implementation 'androidx.appcompat:appcompat:1.4.1'
    //implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
    //implementation 'com.google.mlkit:barcode-scanning:17.2.0'
    //implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:18.3.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.android.support:design:34.0.3'
    implementation 'com.loopj.android:android-async-http:1.4.9'
    //implementation 'com.google.zxing:core:3.3.2'
    //implementation 'com.journeyapps:zxing-android-embedded:3.6.0@aar'
    //implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
    //implementation 'com.google.zxing:core:3.4.0'
    //implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
    //implementation 'com.dm.zbar.android.scanner:zbar:1.9'
    implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
    implementation 'com.github.medyo:android-about-page:1.2.4'
    implementation 'org.apache.commons:commons-lang3:3.6'
    implementation 'com.jakewharton:butterknife:10.2.3'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.11.0'
    //implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
    //implementation 'com.google.android.gms:play-services-vision:20.1.3'
    //implementation 'androidx.compose.ui:ui-tooling-preview-android:+'
    //implementation 'androidx.camera:camera-core:1.0.2'

    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:2.8.9'
    testImplementation 'org.powermock:powermock-module-junit4:1.7.4'
    testImplementation 'org.powermock:powermock-api-mockito2:1.7.0RC2'
    testImplementation 'org.hamcrest:hamcrest-all:1.3'

    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
}

tasks.withType(JavaCompile).configureEach{options.fork = true
    options.forkOptions.jvmArgs +=[
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']}

//apply plugin: 'com.google.gms.google-services'